<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">

    <group android:id="@+id/subjects">
        <item
            android:id="@+id/nav_request"
            android:title="@string/request"
            android:icon="@drawable/ic_question_answer_black_24dp"/>
    </group>

    <group android:id="@+id/other">
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_black_24dp"/>
        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate"
            android:icon="@drawable/ic_star_black_24dp"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/feedback"
            android:icon="@drawable/ic_feedback_black_24dp"/>
    </group>

    <group android:id="@+id/other2">
        <item
            android:id="@+id/nav_more"
            android:title="@string/more"
            android:icon="@drawable/ic_more_black_24dp"/>
    </group>
</menu>